aboutのエンドレススクロール前まで

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="#join" class="header__link">参加要項</a>
                 <a href="#contact" class="header__link">お問い合わせ</a>
             </div>
-                <a href="#submit" class="header__button button">応募してみる</a>
+                <a href="#submit" class="header__button button1">応募してみる</a>
             </nav>
             <button id="js-drawer-icon"  class="header__open drawer-icon">
                     <span class="drawer-icon__bar"></span>
@@ -68,24 +68,99 @@
             <a href="#qa" class="drawer__link">よくある質問</a>
             <a href="#join" class="drawer__link">参加要項</a>
             <a href="#contact" class="drawer__link">お問い合わせ</a>
-            <a href="#submit" class="drawer__button button">応募してみる</a>
+            <a href="#submit" class="drawer__button button1">応募してみる</a>
         </nav>
       </div>
 
     <!-- mvセクション -->
     <section class="mv">
-        <div class="mv__inner">
+        <div class="mv__inner inner">
             <div class="mv__content">
-                <h2 class="mv__sub">あなたの見つけたレトロな尾道の一枚をInstagramに投稿しよう</h2>
+                <h2 class="mv__sub">あなたの見つけたレトロな尾道の一枚を<br/>Instagramに投稿しよう</h2>
                 <div class="mv__lead">
-                    <p class="mv__lead1"></p>
-                    <p class="mv__lead2"></p>
+                    <div class="mv__lead1">
+                        <img class="image1" src="./img/Vector-1.png" alt="">
+                        <img class="image2" src="./img/Vector-2.png" alt="">
+                        <img class="image3" src="./img/Vector-3.png" alt="">
+                        <img class="image4" src="./img/Vector-4.png" alt="">
+                        <img class="image5" src="./img/Vector-5.png" alt="">
+                        <img class="image6" src="./img/Vector-6.png" alt="">
+                        <img class="image7" src="./img/Vector-7.png" alt="">
+                        <img class="image8" src="./img/Vector-8.png" alt="">
+                        <img class="image9" src="./img/Vector-9.png" alt="">
+                        <img class="image10" src="./img/Vector-10.png" alt="">
+                    </div>
+                    <div class="mv__lead2">
+                        <img class="image11" src="./img/Vector-11.png" alt="">
+                        <img class="image12" src="./img/Vector-12.png" alt="">
+                        <img class="image13" src="./img/Vector-13.png" alt="">
+                        <img class="image14" src="./img/Vector-14.png" alt="">
+                        <img class="image15" src="./img/Vector-15.png" alt="">
+                        <img class="image16" src="./img/Vector-16.png" alt="">
+                        <img class="image17" src="./img/Vector-17.png" alt="">
+                    </div>
                 </div>
-                
+                <div class="fukidashi"><img src="./img/img-fukidashi.png" alt=""></div>
+                <div class="present"><img src="./img/img-present.png" alt=""></div>
+                <div class="SP"><img src="./img/mv-SP.png"  class="hidden-pc" alt="">
+                <img src="./img/mv-PC.png"  class="hidden-sp" alt=""></div>
+                <div class="foods"><img src="./img/img-foods.png" alt=""></div>
+                <div class="cat1"><img src="./img/cat1.png" alt=""></div>
+                <div class="cat2"><img src="./img/cat2.png" alt=""></div>
             </div>
         </div>
     </section>
-
+<!-- about -->
+    <section class="about">
+        <div class="about__inner inner">
+            <div class="about__content">
+                    <div class="about__img1"><img src="./img/img_about_pic1.png" alt=""></div>
+                    <div class="about__img2"><img src="./img/img_about_pic2.png" alt=""></div>
+                    <div class="about__main">
+                        <div class="about__head-center">
+                            <div class="about__icon"><img src="./img/icon-megaphone.png" alt=""></div>
+                            <div class="about__title">About</div>
+                            <h2 class="about__sub">キャンペーンについて</h2>
+                        </div>
+                    <div class="about__text">
+                        <h3 class="about__text-first">あなたの心が動いた尾道の瞬間を
+                            <br/>＼ おしえてください！ ／</h3>
+                        <p class="about__description">
+                            風情あふれる坂道に、静かに佇むお寺。<br/>
+                            路地裏の角をまがれば<br/>
+                            気ままにお昼寝する猫に出会え、<br/>
+                            ふと振り返れば、美しい瀬戸内の海が。
+                        </p>
+                        <p class="about__description">
+                            数々の映画の舞台にもなってきたこの街には<br/>
+                            心がほどけるような、<br/>
+                            レトロでやさしい風景が広がっています。
+                        </p>
+                        <p class="about__description">   
+                            あなたの見つけた尾道のなつかしい景色を、<br/>
+                            ぜひおしえてください。
+                        </p>
+                        <p class="about__description">
+                            尾道観光部（@onomichi_retro）を<br/>
+                            フォロー&尾道で撮影した写真を、<br/>
+                            ハッシュタグ「<span class="bold">#見つけて尾道レトロ</span>」を<br/>
+                            つけてInstagramに投稿いただいた方の中から</p>
+                    </div>
+                    <div class="about__text-end">尾道のギフトを100名様にプレゼント！</div>
+                    <button class="about__button button2">参加の仕方はこちら</button>
+                    </div>
+                    <div class="about__img-inlign">
+                    <div class="about__img-left"><img src="./img/photo_Left.png" alt=""></div>
+                    <div class="about__img-right"><img src="./img/photo_Right.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="about-arrow"><img src="./img/about-arrow.png" alt=""></div>
+                <div class="about-maru2ko"><img src="./img/maru2ko.png" alt=""></div>
+                <div class="about-marutyari"><img src="./img/marutyari.png" alt=""></div>
+                <div class="about-goods"><img src="./img/img_about_goods.png" alt=""></div>
+                <div class="sakamichi"><img src="./img/sakamichi.png" alt=""></div>
+            </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
