スライダーの実装前まで

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
             </div>
         </div>
     </section>
+    
 <!-- about -->
     <section class="about">
+        <div class="about__img-position">
         <div class="about__inner inner">
             <div class="about__content">
                     <div class="about__img1"><img src="./img/img_about_pic1.png" alt=""></div>
@@ -153,12 +155,30 @@
                     <div class="about__img-left"><img src="./img/photo_Left.png" alt=""></div>
                     <div class="about__img-right"><img src="./img/photo_Right.png" alt=""></div>
                     </div>
+                    <div class="about-arrow"><img src="./img/about-arrow.png" alt=""></div>
+                    <div class="about-maru2ko"><img src="./img/maru2ko.png" alt=""></div>
+                    <div class="about-marutyari"><img src="./img/marutyari.png" alt=""></div>
+                    <div class="about-goods"><img src="./img/img_about_goods.png" alt=""></div>
+                    <div class="sakamichi"><img src="./img/sakamichi.png" alt=""></div>
+                    <div class="about_onomichi">
+                        <img src="./img/img_onomichi.png" alt="">
+                    </div>
                 </div>
-                <div class="about-arrow"><img src="./img/about-arrow.png" alt=""></div>
-                <div class="about-maru2ko"><img src="./img/maru2ko.png" alt=""></div>
-                <div class="about-marutyari"><img src="./img/marutyari.png" alt=""></div>
-                <div class="about-goods"><img src="./img/img_about_goods.png" alt=""></div>
-                <div class="sakamichi"><img src="./img/sakamichi.png" alt=""></div>
+                </div>
+            </div>
+            <div class="swiper">
+                <div class="swiper-wapper">
+                    <div class="swiper-slide"><img src="./img/img_about_scroll1.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll2.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll3.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll4.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll5.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll6.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll7.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll8.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll9.png" alt=""></div>
+                    <div class="swiper-slide"><img src="./img/img_about_scroll10.png" alt=""></div>
+                </div>
             </div>
     </section>
 
