--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
                             <h2 class="about__sub">キャンペーンについて</h2>
                         </div>
                     <div class="about__text">
-                        <h3 class="about__text-first">あなたの心が動いた尾道の瞬間を
-                            <br/>＼ おしえてください！ ／</h3>
+                        <h3 class="about__text-first"><span class="hidden-sp">＼</span>あなたの心が動いた尾道の瞬間を
+                            <br class="hidden-pc"/><span class="hidden-pc">＼</span> おしえてください！ ／</h3>
                         <p class="about__description">
                             風情あふれる坂道に、静かに佇むお寺。<br/>
-                            路地裏の角をまがれば<br/>
+                            路地裏の角をまがれば<br class="hidden-pc"/>
                             気ままにお昼寝する猫に出会え、<br/>
                             ふと振り返れば、美しい瀬戸内の海が。
                         </p>
                         <p class="about__description">
                             数々の映画の舞台にもなってきたこの街には<br/>
-                            心がほどけるような、<br/>
+                            心がほどけるような、<br class="hidden-pc"/>
                             レトロでやさしい風景が広がっています。
                         </p>
                         <p class="about__description">   
@@ -143,10 +143,10 @@
                             ぜひおしえてください。
                         </p>
                         <p class="about__description">
-                            尾道観光部（@onomichi_retro）を<br/>
-                            フォロー&尾道で撮影した写真を、<br/>
+                            尾道観光部（@onomichi_retro）を<br class="hidden-pc"/>
+                            フォロー&<br class="hidden-sp"/>尾道で撮影した写真を、<br class="hidden-pc"/>
                             ハッシュタグ「<span class="bold">#見つけて尾道レトロ</span>」を<br/>
-                            つけてInstagramに投稿いただいた方の中から</p>
+                            つけて<br class="hidden-pc"/>Instagramに投稿いただいた方の中から</p>
                     </div>
                     <div class="about__text-end">尾道のギフトを100名様にプレゼント！</div>
                     <button class="about__button button2">参加の仕方はこちら</button>
@@ -155,19 +155,23 @@
                     <div class="about__img-left"><img src="./img/photo_Left.png" alt=""></div>
                     <div class="about__img-right"><img src="./img/photo_Right.png" alt=""></div>
                     </div>
+                </div>
                     <div class="about-arrow"><img src="./img/about-arrow.png" alt=""></div>
                     <div class="about-maru2ko"><img src="./img/maru2ko.png" alt=""></div>
                     <div class="about-marutyari"><img src="./img/marutyari.png" alt=""></div>
                     <div class="about-goods"><img src="./img/img_about_goods.png" alt=""></div>
                     <div class="sakamichi"><img src="./img/sakamichi.png" alt=""></div>
+                    <div class="slice hidden-sp"><img src="./img/slice.png" alt=""></div>
+                    <div class="nikukyu hidden-sp"><img src="./img/img_bg_pawpads.png" alt=""></div>
+                    <div class="line hidden-sp"><img src="./img/bg_wavyline.png" alt=""></div>
+                    <div class="line-long hidden-sp"><img src="./img/bg_wavyline_long.png" alt=""></div>
                     <div class="about_onomichi">
                         <img src="./img/img_onomichi.png" alt="">
                     </div>
                 </div>
-                </div>
             </div>
             <div class="swiper">
-                <div class="swiper-wapper">
+                <div class="swiper-wrapper">
                     <div class="swiper-slide"><img src="./img/img_about_scroll1.png" alt=""></div>
                     <div class="swiper-slide"><img src="./img/img_about_scroll2.png" alt=""></div>
                     <div class="swiper-slide"><img src="./img/img_about_scroll3.png" alt=""></div>
