--- a/index.html
+++ b/index.html
@@ -243,9 +243,11 @@
     </section>
 
     <section class="prizes">
+        <img class="triangle1 hidden-sp" src="./img/img_bg_triangle.png" alt="">
+        <img class="triangle2 hidden-sp" src="./img/img_bg_triangle.png" alt="">
         <div class="prizes__background">
             <div class="prizes__background__img">
-            <svg xmlns="http://www.w3.org/2000/svg" width="238" height="83" viewBox="0 0 238 83" fill="none">
+            <svg class="prizes__head-img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 238 83" fill="none">
                 <path d="M0 83C11.6916 83 21.3926 74.4179 25.658 63.532C40.2316 26.3384 76.44 0 118.8 0C161.16 0 197.369 26.3384 211.942 63.5321C216.208 74.4179 225.909 83 237.6 83C118.8 83 118.8 83 0 83Z" fill="white"/>
                 </svg></div>
         <div class="prizes__inner inner">
@@ -258,93 +260,109 @@
                 <p class="prizes__text">キャンペーンにご参加いただたい方の中から100名様に、尾道で人気のお土産セットやオリジナルグッズをプレゼント！</p>
                 <div class="prizes__cards">
                     <div class="prizes__card">
-                        <div class="prizes__card-number">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" viewBox="0 0 46 47" fill="none">
+                        <div class="prizes__card-number prizes__card-number1">
+                            <svg class="prizes__card-number-img prizes__card-number-img1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
                                 <text x="50%" y="30%" text-anchor="middle" font-size="8" fill="#FFF" class="prizes__prizes">特典</text>
                                 <text x="50%" y="80%" text-anchor="middle" font-size="12" fill="#FFF" class="prizes__num">1</text>
                             </svg>
                         </div>
-                        <div class="prizes__main-img"><img src="./img/prizes1.png" alt=""></div>
-                        <div class="prizes__description">
-                            <div class="prizes__description-text">海街洋菓子店<br/>
+                        <div class="prizes__main-img prizes__main-img1"><img src="./img/prizes1.png" alt=""></div>
+                        <div class="prizes__description prizes__description1">
+                            <div class="prizes__description-text prizes__description-text1">海街洋菓子店<br/>
                                 スイーツセット</div>
                             <div class="prizes__serch">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                                <svg class="prizes__serch-img prizes__serch-img1" xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
                                 <path d="M36.0001 0.333252V36.3333H0L36.0001 0.333252Z" fill="#67B0C7"/>
                                 <image x="18" y="18" width="12" height="12" href="./img/img_prizes_zoom_icon.png" />
                             </svg>
                         </div>
                         </div>
                     </div>
+
+
+
                     <div class="prizes__card">
-                        <div class="prizes__card-number">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" viewBox="0 0 46 47" fill="none">
+                        <div class="prizes__card-number prizes__card-number1">
+                            <svg class="prizes__card-number-img prizes__card-number-img1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
                                 <text x="50%" y="30%" text-anchor="middle" font-size="8" fill="#FFF" class="prizes__prizes">特典</text>
                                 <text x="50%" y="80%" text-anchor="middle" font-size="12" fill="#FFF" class="prizes__num">2</text>
                             </svg>
                         </div>
-                        <div class="prizes__main-img"><img src="./img/prizes2.png" alt=""></div>
-                        <div class="prizes__description">
-                            <div class="prizes__description-text">ねこねこ<br/>
-                                グッズセット</div>
-                            <div class="prizes__serch"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                        <div class="prizes__main-img prizes__main-img1"><img src="./img/prizes2.png" alt=""></div>
+                        <div class="prizes__description prizes__description1">
+                            <div class="prizes__description-text prizes__description-text1">ねこねこ<br class="hidden-pc"/>グッズセット</div>
+                            <div class="prizes__serch"><svg class="prizes__serch-img prizes__serch-img1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 37" fill="none">
                                 <path d="M36.0001 0.333252V36.3333H0L36.0001 0.333252Z" fill="#67B0C7"/>
                                 <image x="18" y="18" width="12" height="12" href="./img/img_prizes_zoom_icon.png" />
                             </svg></div>
                         </div>
                     </div>
+
+
+
                     <div class="prizes__card">
-                        <div class="prizes__card-number">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" viewBox="0 0 46 47" fill="none">
+                        <div class="prizes__card-number prizes__card-number2">
+                            <svg class="prizes__card-number-img prizes__card-number-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
                                 <text x="50%" y="30%" text-anchor="middle" font-size="8" fill="#FFF" class="prizes__prizes">特典</text>
                                 <text x="50%" y="80%" text-anchor="middle" font-size="12" fill="#FFF" class="prizes__num">3</text>
                             </svg>
                         </div>
-                        <div class="prizes__main-img"><img src="./img/prizes3.png" alt=""></div>
-                        <div class="prizes__description">
+                        <div class="prizes__main-img prizes__main-img2"><img src="./img/prizes3.png" alt=""></div>
+                        <div class="prizes__description prizes__description2">
                             <div class="prizes__description-text">尾道ラーメンセット </div>
-                            <div class="prizes__serch"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                            <div class="prizes__serch"><svg class="prizes__serch-img prizes__serch-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 37" fill="none">
                                 <path d="M36.0001 0.333252V36.3333H0L36.0001 0.333252Z" fill="#67B0C7"/>
                                 <image x="18" y="18" width="12" height="12" href="./img/img_prizes_zoom_icon.png" />
-                            </svg></div>
+                            </svg>
                         </div>
+                        </div>
+
+                        <!-- モーダルの作成 -->
+                         
+
                     </div>
+
+
+
                     <div class="prizes__card">
-                        <div class="prizes__card-number">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" viewBox="0 0 46 47" fill="none">
+                        <div class="prizes__card-number prizes__card-number2">
+                            <svg class="prizes__card-number-img prizes__card-number-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
                                 <text x="50%" y="30%" text-anchor="middle" font-size="8" fill="#FFF" class="prizes__prizes">特典</text>
                                 <text x="50%" y="80%" text-anchor="middle" font-size="12" fill="#FFF" class="prizes__num">4</text>
                             </svg>
                         </div>
-                        <div class="prizes__main-img"><img src="./img/prizes4.png" alt=""></div>
-                        <div class="prizes__description">
+                        <div class="prizes__main-img prizes__main-img2"><img src="./img/prizes4.png" alt=""></div>
+                        <div class="prizes__description prizes__description2">
                             <div class="prizes__description-text">おうちで<br/>
                                 喫茶店セット </div>
                             <div class="prizes__serch">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                                <svg class="prizes__serch-img prizes__serch-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 37" fill="none">
                                 <path d="M36.0001 0.333252V36.3333H0L36.0001 0.333252Z" fill="#67B0C7"/>
                                 <image x="18" y="18" width="12" height="12" href="./img/img_prizes_zoom_icon.png" />
                             </svg>
                         </div>
                         </div>
                     </div>
+
+
+
                     <div class="prizes__card">
-                        <div class="prizes__card-number">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" viewBox="0 0 46 47" fill="none">
+                        <div class="prizes__card-number prizes__card-number2">
+                            <svg class="prizes__card-number-img prizes__card-number-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
                                 <text x="50%" y="30%" text-anchor="middle" font-size="8" fill="#FFF" class="prizes__prizes">特典</text>
                                 <text x="50%" y="80%" text-anchor="middle" font-size="12" fill="#FFF" class="prizes__num">5</text>
                             </svg>
                         </div>
-                        <div class="prizes__main-img"><img src="./img/prizes5.png" alt=""></div>
-                        <div class="prizes__description">
+                        <div class="prizes__main-img prizes__main-img2"><img src="./img/prizes5.png" alt=""></div>
+                        <div class="prizes__description prizes__description2">
                             <div class="prizes__description-text">工房尾道帆布<br/>オリジナルトート</div>
                             <div class="prizes__serch">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                                <svg class="prizes__serch-img prizes__serch-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 37" fill="none">
                                     <path d="M36.0001 0.333252V36.3333H0L36.0001 0.333252Z" fill="#67B0C7"/>
                                     <image x="18" y="18" width="12" height="12" href="./img/img_prizes_zoom_icon.png" />
                                 </svg>
