おすすめのカードまで作成

--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
                 </div>
                 <p class="prizes__text">キャンペーンにご参加いただたい方の中から100名様に、尾道で人気のお土産セットやオリジナルグッズをプレゼント！</p>
                 <div class="prizes__cards">
-                    <div class="prizes__card">
+
+                    <div class="prizes__card"  data-target="modal01">
                         <div class="prizes__card-number prizes__card-number1">
                             <svg class="prizes__card-number-img prizes__card-number-img1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
@@ -280,9 +281,26 @@
                         </div>
                     </div>
 
+                    <!-- モーダルの作成 -->
+                    <div id="modal01" class="prizes__modal">
+                        <div class="prizes__modal__bg">
+                            <div class="modal-card">
+                                <img src="./img/prizes1.png" alt="">
+                                    <div class="modal__text">
+                                        <div class="modal__title">海街洋菓子店 スイーツセット</div>
+                                        <div class="modal__description">海沿いにあるケーキ屋さん、<br/>
+                                            海街洋菓子店の人気焼き菓子詰め合わせセット。<br/>
+                                            こだわりのバターをふんだんに使ったリッチな味わい<br/>で、
+                                            濃厚なコクが後を引く美味しさです。</div>
+                                    </div>
+                                <button class="modal__button button1">閉じる</button>
+                            </div>
+                        </div>
+                    </div>
 
 
-                    <div class="prizes__card">
+
+                    <div class="prizes__card" data-target="modal02">
                         <div class="prizes__card-number prizes__card-number1">
                             <svg class="prizes__card-number-img prizes__card-number-img1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
@@ -300,9 +318,26 @@
                         </div>
                     </div>
 
+                     <!-- モーダルの作成 -->
+                     <div id="modal02" class="prizes__modal">
+                        <div class="prizes__modal__bg">
+                        <div class="modal-card">
+                            <img src="./img/prizes2.png" alt="">
+                            <div class="modal__text">
+                                <div class="modal__title">ねこねこグッズセット</div>
+                                <div class="modal__description">お土産としても大人気の猫グッズを集めました。<br/>
+                                    お家で、オフィスで、<br/>
+                                    眺めているだけでも癒されてしまう<br/>
+                                    愛らしい猫たちと一緒に。</div>
+                            </div>
+                            <button class="modal__button button1">閉じる</button>
+                        </div>
+                     </div>
+                     </div>
 
 
-                    <div class="prizes__card">
+
+                    <div class="prizes__card prizes__card-small" data-target="modal03">
                         <div class="prizes__card-number prizes__card-number2">
                             <svg class="prizes__card-number-img prizes__card-number-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
@@ -319,15 +354,28 @@
                             </svg>
                         </div>
                         </div>
-
-                        <!-- モーダルの作成 -->
-                         
-
+                    </div>
+                     <!-- モーダルの作成 -->
+                     <div id="modal03" class="prizes__modal">
+                        <div class="prizes__modal__bg">
+                            <div class="modal-card">
+                                <img src="./img/prizes3.png" alt="">
+                                <div class="modal__text">
+                                    <div class="modal__title">尾道ラーメンセット</div>
+                                    <div class="modal__description">全国にファンがいる本格的な尾道ラーメンをお家で。
+                                        尾道ラーメンといえば、透き通った醤油スープと、<br/>
+                                        平打ち麺が特徴です。<br/>
+                                        コクがありながらまろやかな味のスープは<br/>
+                                        思わず飲み干したくなるお味。</div>
+                                    </div>
+                                <button class="modal__button button1">閉じる</button>
+                            </div>
+                        </div>
                     </div>
 
 
 
-                    <div class="prizes__card">
+                    <div class="prizes__card prizes__card-small" data-target="modal04">
                         <div class="prizes__card-number prizes__card-number2">
                             <svg class="prizes__card-number-img prizes__card-number-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
@@ -348,9 +396,27 @@
                         </div>
                     </div>
 
+                     <!-- モーダルの作成 -->
+                     <div id="modal04" class="prizes__modal" >
+                        <div class="prizes__modal__bg">
+                        <div class="modal-card">
+                            <img src="./img/prizes4.png" alt="">
+                            <div class="modal__text">
+                                <div class="modal__title">おうちで喫茶店セット </div>
+                                <div class="modal__description">尾道の人気喫茶店のコーヒー豆を使用したドリップ<br/>バッグとマグカップのセット。<br/>
+                                    香り高い深煎りの豆は、カフェオレにするのも◎<br/>
+                                    カンタンに楽しめるドリップバッグは、<br/>
+                                    オフィスや在宅ワーク時、忙しい家事の合間など<br/>
+                                    日常のさまざまなシーンで大活躍。</div>
+                            </div>
+                            <button class="modal__button button1">閉じる</button>
+                        </div>
+                     </div>
+                </div>
 
 
-                    <div class="prizes__card">
+
+                    <div class="prizes__card prizes__card-small" data-target="modal05">
                         <div class="prizes__card-number prizes__card-number2">
                             <svg class="prizes__card-number-img prizes__card-number-img2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46 47" fill="none">
                                 <path d="M20.4995 1.3273C21.9624 0.160701 24.0376 0.160701 25.5005 1.3273C26.5166 2.13761 27.8623 2.4053 29.1112 2.04551C30.9091 1.52754 32.8264 2.32168 33.7314 3.95929C34.3601 5.09676 35.501 5.85908 36.7925 6.00459C38.6518 6.21409 40.1192 7.68148 40.3287 9.5408C40.4742 10.8323 41.2365 11.9731 42.374 12.6018C44.0116 13.5069 44.8057 15.4241 44.2877 17.2221C43.928 18.4709 44.1956 19.8167 45.006 20.8328C46.1726 22.2957 46.1726 24.3708 45.006 25.8337C44.1956 26.8498 43.928 28.1956 44.2877 29.4444C44.8057 31.2424 44.0116 33.1596 42.374 34.0647C41.2365 34.6934 40.4742 35.8342 40.3287 37.1257C40.1192 38.985 38.6518 40.4524 36.7925 40.6619C35.501 40.8074 34.3601 41.5697 33.7314 42.7072C32.8264 44.3448 30.9091 45.139 29.1112 44.621C27.8623 44.2612 26.5166 44.5289 25.5005 45.3392C24.0376 46.5058 21.9624 46.5058 20.4995 45.3392C19.4834 44.5289 18.1377 44.2612 16.8888 44.621C15.0909 45.139 13.1736 44.3448 12.2685 42.7072C11.6399 41.5697 10.499 40.8074 9.20755 40.6619C7.34822 40.4524 5.88084 38.985 5.67134 37.1257C5.52582 35.8342 4.76351 34.6934 3.62604 34.0647C1.98843 33.1596 1.19428 31.2424 1.71226 29.4444C2.07204 28.1956 1.80436 26.8498 0.994049 25.8337C-0.172551 24.3708 -0.172551 22.2957 0.994049 20.8328C1.80436 19.8167 2.07204 18.4709 1.71226 17.2221C1.19428 15.4241 1.98843 13.5069 3.62604 12.6018C4.76351 11.9731 5.52582 10.8323 5.67134 9.5408C5.88084 7.68148 7.34822 6.21409 9.20755 6.00459C10.499 5.85908 11.6399 5.09676 12.2685 3.9593C13.1736 2.32168 15.0909 1.52754 16.8888 2.04551C18.1377 2.4053 19.4834 2.13761 20.4995 1.3273Z" fill="#CE2073"/>
@@ -369,12 +435,109 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- モーダルの作成 -->
+                    <div id="modal05" class="prizes__modal">
+                        <div class="prizes__modal__bg">
+                            <div class="modal-card">
+                                <img src="./img/prizes5.png" alt="">
+                                <div class="modal__text">
+                                    <div class="modal__title">工房尾道帆布オリジナルトート</div>
+                                    <div class="modal__description">工房尾道帆布とコラボした、<br/>
+                                        本キャンペーンオリジナルトート。<br/>
+                                        シンプルなデザインで、シーンを選ばず<br/>
+                                        お使いいただけます。<br/>
+                                        しっかりした生地で、<br/>
+                                        年月とともに変化していく風合いも魅力。</div>
+                                </div>
+                                <button class="modal__button button1">閉じる</button>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <button class="prizes__button button2">#見つけて尾道レトロ の最新投稿を見る</button>
         </div>
         </div>
     </section>
+    <!-- 中間画像 -->
+    <div class="middle__bg">
+        <div class="middle__bg-img"></div>
+    </div>
+    <!-- おすすめスポット -->
+     <section class="recommend">
+        <div class="recommend__inner inner">
+            <div class="recommend__content">
+                <div class="recommend__title">
+                    <div class="star"><img src="./img/Icon-star.png" alt=""></div>
+                    <div class="recommend__title-text">おすすめスポット</div>
+                </div>
+                <div class="recommend__cards">
+
+                <div class="recommend__card">
+                    <img src="./img/img_spots1.png" alt="">
+                    <div class="recommend__card-text">
+                        <div class="recommend__card-main">天寧寺　海雲塔</div>
+                        <div class="recommend__card-sub">尾道のシンボルともいえる三重の塔。海雲塔ごしに見える坂と海のパノラマは、まさに絶景そのもの。</div>
+                    </div>
+                </div>
+
+                <div class="recommend__card">
+                    <img src="./img/img_spots2.png" alt="">
+                    <div class="recommend__card-text">
+                        <div class="recommend__card-main">猫の細道</div>
+                        <div class="recommend__card-sub">尾道名物といえば、やっぱり猫！猫たちが集まりやすいスポットとして有名な猫の細道は、神社の手前からお寺までおよそ200メートル続きます。あちこちに飾られた猫のアートを見るのも楽しいですよ。</div>
+                    </div>
+                </div>
+
+                <div class="recommend__card">
+                    <img src="./img/img_spots3.png" alt="">
+                    <div class="recommend__card-text">
+                        <div class="recommend__card-main">本通商店街</div>
+                        <div class="recommend__card-sub">東西にのびる通りには、個性豊かなお店が並びます。尾道ならではのお土産探しにもぴったりのエリアです。風情あふれる通りを歩きながら、自分だけの宝物探しにでかけましょう！</div>
+                    </div>
+                </div>
+
+                <div class="recommend__card">
+                    <img src="./img/img_spots4.png" alt="">
+                    <div class="recommend__card-text">
+                        <div class="recommend__card-main">工房尾道帆布</div>
+                        <div class="recommend__card-sub">向島産の帆布を使ったバッグや小物がそろうお店。ポケット追加などのオーダー（有料）も可能です。店内には、帆布の織機も展示してあります。旅の相棒になるバッグを探してみるのもいいかも！</div>
+                    </div>
+                </div>
+
+                <div class="recommend__card">
+                    <img src="./img/img_spots5.png" alt="">
+                    <div class="recommend__card-text">
+                        <div class="recommend__card-main">ゆーゆー</div>
+                        <div class="recommend__card-sub">約100年続いた銭湯を改装したユニークなカフェ。のれんの向こうには、脱衣ロッカーやタイル張りの壁が残っており、当時のおもかげを色濃く感じることができます。地元産のジュースや調味料なども扱っており、お土産にもぴったり。</div>
+                    </div>
+                </div>
+
+                <div class="recommend__card">
+                    <img src="./img/img_spots6.png" alt="">
+                    <div class="recommend__card-text">
+                        <div class="recommend__card-main">AIRSHIP COFFEE</div>
+                        <div class="recommend__card-sub">元航海士のコーヒー専門家が営むカフェ。大のコーヒー好きであるオーナー自身が、古民家を再生して開いたお店です。こだわりの詰まったコーヒーは、コーヒー通も唸るおいしさ。テイクアウトして海辺で飲むのもおすすめ！</div>
+                    </div>
+                </div>
+
+                <div class="recommend__card">
+                    <img src="./img/img_spots7.png" alt="">
+                    <div class="recommend__card-text">
+                        <div class="recommend__card-main">日暮亭（ひぐらしてい）</div>
+                        <div class="recommend__card-sub">築百年のお家をリノベーションし、畳や梁が建築当時のまま残る喫茶店。和のスイーツが楽しめます。人気メニューはみたらしパフェ。</div>
+                    </div>
+                </div>
+                
+                </div>
+                <div class="recommend__img-sport"><img src="" alt=""></div>
+                <div class="recommend__white-text">レトロな景色に出会える人気の撮影スポットをピックアップ！</div>
+                <button class="prizes__button button2">#見つけて尾道レトロ の最新投稿を見る</button>
+            </div>
+        </div>
+     </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
