--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
 
-<link
+    <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
@@ -170,18 +170,18 @@
                     </div>
                 </div>
             </div>
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="./img/img_about_scroll1.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll2.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll3.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll4.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll5.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll6.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll7.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll8.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll9.png" alt=""></div>
-                    <div class="swiper-slide"><img src="./img/img_about_scroll10.png" alt=""></div>
+            <div class="about-swiper">
+                <div class="swiper-wrapper about-swiper-wrapper">
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll1.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll2.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll3.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll4.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll5.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll6.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll7.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll8.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll9.png" alt=""></div>
+                    <div class="swiper-slide about-swiper-slide"><img src="./img/img_about_scroll10.png" alt=""></div>
                 </div>
             </div>
     </section>
@@ -465,8 +465,23 @@
     <div class="middle__bg">
         <div class="middle__bg-img"></div>
     </div>
-    <!-- おすすめスポット -->
+   
+     <!-- おすすめスポット -->
      <section class="recommend">
+        <div class="recommend__head__form">
+            <svg class="recommend__head__form1" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+                <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
+              </svg>
+              <svg class="recommend__head__form2" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+                <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
+              </svg>
+              <svg class="recommend__head__form3" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+                <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
+              </svg>
+              <svg class="recommend__head__form4" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+                <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
+              </svg>
+        </div>
         <div class="recommend__inner inner">
             <div class="recommend__content">
                 <div class="recommend__title">
@@ -474,69 +489,107 @@
                     <div class="recommend__title-text">おすすめスポット</div>
                 </div>
                 <div class="recommend__cards">
-
-                <div class="recommend__card">
-                    <img src="./img/img_spots1.png" alt="">
-                    <div class="recommend__card-text">
-                        <div class="recommend__card-main">天寧寺　海雲塔</div>
-                        <div class="recommend__card-sub">尾道のシンボルともいえる三重の塔。海雲塔ごしに見える坂と海のパノラマは、まさに絶景そのもの。</div>
+                <!-- Slider main container -->
+                <div class="swiper recommend-swiper">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper recommend-swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide recommend-swiper-slide">
+                        <div class="recommend__card">
+                            <img src="./img/img_spots1.png" alt="">
+                            <div class="recommend__card-text">
+                                <div class="recommend__card-main">天寧寺　海雲塔</div>
+                                <div class="recommend__card-sub">尾道のシンボルともいえる三重の塔。海雲塔ごしに見える坂と海のパノラマは、まさに絶景そのもの。</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="recommend__card">
-                    <img src="./img/img_spots2.png" alt="">
-                    <div class="recommend__card-text">
-                        <div class="recommend__card-main">猫の細道</div>
-                        <div class="recommend__card-sub">尾道名物といえば、やっぱり猫！猫たちが集まりやすいスポットとして有名な猫の細道は、神社の手前からお寺までおよそ200メートル続きます。あちこちに飾られた猫のアートを見るのも楽しいですよ。</div>
+                    <div class="swiper-slide recommend-swiper-slide">
+                        <div class="recommend__card">
+                            <img src="./img/img_spots2.png" alt="">
+                            <div class="recommend__card-text">
+                                <div class="recommend__card-main">猫の細道</div>
+                                <div class="recommend__card-sub">尾道名物といえば、やっぱり猫！猫たちが集まりやすいスポットとして有名な猫の細道は、神社の手前からお寺までおよそ200メートル続きます。あちこちに飾られた猫のアートを見るのも楽しいですよ。</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="recommend__card">
-                    <img src="./img/img_spots3.png" alt="">
-                    <div class="recommend__card-text">
-                        <div class="recommend__card-main">本通商店街</div>
-                        <div class="recommend__card-sub">東西にのびる通りには、個性豊かなお店が並びます。尾道ならではのお土産探しにもぴったりのエリアです。風情あふれる通りを歩きながら、自分だけの宝物探しにでかけましょう！</div>
+                    <div class="swiper-slide recommend-swiper-slide">
+                        <div class="recommend__card">
+                            <img src="./img/img_spots3.png" alt="">
+                            <div class="recommend__card-text">
+                                <div class="recommend__card-main">本通商店街</div>
+                                <div class="recommend__card-sub">東西にのびる通りには、個性豊かなお店が並びます。尾道ならではのお土産探しにもぴったりのエリアです。風情あふれる通りを歩きながら、自分だけの宝物探しにでかけましょう！</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="recommend__card">
-                    <img src="./img/img_spots4.png" alt="">
-                    <div class="recommend__card-text">
-                        <div class="recommend__card-main">工房尾道帆布</div>
-                        <div class="recommend__card-sub">向島産の帆布を使ったバッグや小物がそろうお店。ポケット追加などのオーダー（有料）も可能です。店内には、帆布の織機も展示してあります。旅の相棒になるバッグを探してみるのもいいかも！</div>
+                    <div class="swiper-slide recommend-swiper-slide">
+                        <div class="recommend__card">
+                            <img src="./img/img_spots4.png" alt="">
+                            <div class="recommend__card-text">
+                                <div class="recommend__card-main">工房尾道帆布</div>
+                                <div class="recommend__card-sub">向島産の帆布を使ったバッグや小物がそろうお店。ポケット追加などのオーダー（有料）も可能です。店内には、帆布の織機も展示してあります。旅の相棒になるバッグを探してみるのもいいかも！</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="recommend__card">
-                    <img src="./img/img_spots5.png" alt="">
-                    <div class="recommend__card-text">
-                        <div class="recommend__card-main">ゆーゆー</div>
-                        <div class="recommend__card-sub">約100年続いた銭湯を改装したユニークなカフェ。のれんの向こうには、脱衣ロッカーやタイル張りの壁が残っており、当時のおもかげを色濃く感じることができます。地元産のジュースや調味料なども扱っており、お土産にもぴったり。</div>
+                    <div class="swiper-slide recommend-swiper-slide">
+                        <div class="recommend__card">
+                            <img src="./img/img_spots5.png" alt="">
+                            <div class="recommend__card-text">
+                                <div class="recommend__card-main">ゆーゆー</div>
+                                <div class="recommend__card-sub">約100年続いた銭湯を改装したユニークなカフェ。のれんの向こうには、脱衣ロッカーやタイル張りの壁が残っており、当時のおもかげを色濃く感じることができます。地元産のジュースや調味料なども扱っており、お土産にもぴったり。</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="recommend__card">
-                    <img src="./img/img_spots6.png" alt="">
-                    <div class="recommend__card-text">
-                        <div class="recommend__card-main">AIRSHIP COFFEE</div>
-                        <div class="recommend__card-sub">元航海士のコーヒー専門家が営むカフェ。大のコーヒー好きであるオーナー自身が、古民家を再生して開いたお店です。こだわりの詰まったコーヒーは、コーヒー通も唸るおいしさ。テイクアウトして海辺で飲むのもおすすめ！</div>
+                    <div class="swiper-slide recommend-swiper-slide">
+                        <div class="recommend__card">
+                            <img src="./img/img_spots6.png" alt="">
+                            <div class="recommend__card-text">
+                                <div class="recommend__card-main">AIRSHIP COFFEE</div>
+                                <div class="recommend__card-sub">元航海士のコーヒー専門家が営むカフェ。大のコーヒー好きであるオーナー自身が、古民家を再生して開いたお店です。こだわりの詰まったコーヒーは、コーヒー通も唸るおいしさ。テイクアウトして海辺で飲むのもおすすめ！</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="recommend__card">
+                    <div class="swiper-slide recommend-swiper-slide"><div class="recommend__card">
                     <img src="./img/img_spots7.png" alt="">
                     <div class="recommend__card-text">
                         <div class="recommend__card-main">日暮亭（ひぐらしてい）</div>
                         <div class="recommend__card-sub">築百年のお家をリノベーションし、畳や梁が建築当時のまま残る喫茶店。和のスイーツが楽しめます。人気メニューはみたらしパフェ。</div>
                     </div>
                 </div>
-                
                 </div>
-                <div class="recommend__img-sport"><img src="" alt=""></div>
+                </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+                
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+                </div>
+                <div class="recommend__img-sport"><img src="./img/img_spots.png" alt=""></div>
                 <div class="recommend__white-text">レトロな景色に出会える人気の撮影スポットをピックアップ！</div>
-                <button class="prizes__button button2">#見つけて尾道レトロ の最新投稿を見る</button>
+                <button class="recommend__button button2">#見つけて尾道レトロ の最新投稿を見る</button>
             </div>
         </div>
+        <div class="recommend__bottom__icon">
+        <svg class="recommend__bottom__icon1" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+            <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
+        </svg>
+        <svg class="recommend__bottom__icon2" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+            <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
+            </svg>
+        <svg class="recommend__bottom__icon3" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+            <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
+        </svg>
+        <svg class="recommend__bottom__icon4" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+            <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
+        </svg>
+    </div>
      </section>
 
 
